Fix resource thumbnails to only show placeholders when no image exists, increase list spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -299,7 +299,7 @@ ul {
 ul li {
     padding-left: 0.4em;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 0.2em;
     line-height: 1.6em;
 }
 
